fixed erros in notebook, updated biopython, removed unnecessary files, compressed prediction outputs

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -10,8 +10,7 @@
     "<img src=\"http://bioinfo-pharma.u-strasbg.fr/labwebsite/images/logo_UMR7200.png\" width=\"250\" align=\"right\" style=\"height:240px\">\n",
     "\n",
     "\n",
-    "# Strasbourg Summer School in Chemoinformatics 2024\n",
-    "## Multistate modelling using LIT-AlphaFold\n",
+    "# Strasbourg Summer School in Chemoinformatics 2024 - Multistate modelling using LIT-AlphaFold\n",
     "<img src=\"https://infochim.chimie.unistra.fr/squelettes-infochim/images/logo-conferences.png\" width=\"200\" align=\"right\" style=\"height:240px\">\n",
     "\n",
     "In this tutorial we will present you AlphaFold and its use, as weel as specific application aimed at modelling different conformational states fo a target protein.\n",
@@ -55,7 +54,7 @@
     "    os.system(\"pip install --quiet alphapulldown==0.40.4 --no-deps\")\n",
     "    os.system('pip install --quiet --no-warn-conflicts \"colabfold[alphafold-minus-jax] @ git+https://github.com/sokrypton/ColabFold@v1.5.3\"')\n",
     "    os.system(\"pip install --quiet https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.25+cuda11.cudnn82-cp310-cp310-manylinux2014_x86_64.whl\")\n",
-    "    os.system(\"pip install --quiet jax==0.3.25 chex==0.1.6 biopython==1.79\")\n",
+    "    os.system(\"pip install --quiet jax==0.3.25 chex==0.1.6 biopython==1.82\")\n",
     "    os.system(\"touch COLABFOLD_READY\")\n",
     "print(\"Environment ready\")\n",
     "\n",
@@ -75,13 +74,13 @@
     "    # check if TPU is available\n",
     "    import jax.tools.colab_tpu\n",
     "    jax.tools.colab_tpu.setup_tpu()\n",
-    "    logger.info('Running on TPU')\n",
+    "    print('Running on TPU')\n",
     "except:\n",
     "    if jax.local_devices()[0].platform == 'cpu':\n",
-    "        logging.info(\"WARNING: no GPU detected, will be using CPU\")\n",
+    "        print(\"WARNING: no GPU detected, will be using CPU\")\n",
     "    else:\n",
     "        import tensorflow as tf\n",
-    "        logging.info('Running on GPU')"
+    "        print('Running on GPU')"
    ]
   },
   {
@@ -235,7 +234,7 @@
     "\n",
     "sarscov_monomer = MonomericObjectMmseqs2(description[0], seq[0])\n",
     "sarscov_monomer.make_features(DEFAULT_API_SERVER=DEFAULT_API_SERVER,\n",
-    "                                            output_dir=\"protein_features\",\n",
+    "                                            output_dir=protein_features,\n",
     "                                            templates_path='mmseqs2',\n",
     "                                            max_template_date='2050-01-01',\n",
     "                                            filter_t= [{}, []])\n",
@@ -469,6 +468,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8d527a-a968-41a6-9aa3-e666de80752a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Package and Download results { display-mode: \"form\" }\n",
+    "from google.colab import files\n",
+    "results_zip = f\"3CL-proteinase_result.zip\"\n",
+    "os.system(f\"zip -r {results_zip} {output_path} {github}/protein_features/3CL-proteinase.pkl.bz2\")\n",
+    "files.download(results_zip)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3a6fcec5-3d5e-4e24-b650-2af1b1fd3412",
    "metadata": {},
@@ -501,6 +514,8 @@
     "show_sidechains = False #@param {type:\"boolean\"}\n",
     "show_mainchains = False #@param {type:\"boolean\"}\n",
     "tag = rank_num - 1\n",
+    "\n",
+    "adrb2_path = 'ADRB2_filter_adrb2'\n",
     "\n",
     "pdb_filename = f\"{protein_structures}/{adrb2_path}/ranked_{tag}.pdb\"\n",
     "\n",
@@ -823,30 +838,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2653f609-76e7-45f8-8dd9-a4cfec64eedf",
-   "metadata": {},
-   "source": [
-    "## Save results"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91cc5663-654e-4f9f-afb0-03d6f7fba0d8",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "id": "91cc5663-654e-4f9f-afb0-03d6f7fba0d8",
-    "outputId": "0c87204e-a567-48b2-b61a-e8e7271214ab"
-   },
+   "id": "69791e02-c4f9-4c52-b945-e5253d9c42c3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# @title Package and Download results { display-mode: \"form\" }\n",
-    "results_zip = f\"{github}.result.zip\"\n",
-    "os.system(f\"zip -r {results_zip} {github}\")\n",
+    "results_zip = f\"ADRB2_multistate.zip\"\n",
+    "os.system(f\"zip -r {results_zip} {output_path}\")\n",
     "files.download(results_zip)"
    ]
   }
