fixed erros in notebook, selected correct version of biopython

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -11,10 +11,12 @@
     "\n",
     "\n",
     "# Strasbourg Summer School in Chemoinformatics 2024 - Multistate modelling using LIT-AlphaFold\n",
+    "\n",
     "<img src=\"https://infochim.chimie.unistra.fr/squelettes-infochim/images/logo-conferences.png\" width=\"200\" align=\"right\" style=\"height:240px\">\n",
     "\n",
     "In this tutorial we will present you AlphaFold and its use, as weel as specific application aimed at modelling different conformational states fo a target protein.\n",
-    "All data and information are available from this tutorial [GitHub page]()."
+    "\n",
+    "All data and information are available from this tutorial [GitHub page](https://github.com/LIT-CCM-lab/CS3_2024_AlphaFold_Tutorial)."
    ]
   },
   {
@@ -54,7 +56,7 @@
     "    os.system(\"pip install --quiet alphapulldown==0.40.4 --no-deps\")\n",
     "    os.system('pip install --quiet --no-warn-conflicts \"colabfold[alphafold-minus-jax] @ git+https://github.com/sokrypton/ColabFold@v1.5.3\"')\n",
     "    os.system(\"pip install --quiet https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.25+cuda11.cudnn82-cp310-cp310-manylinux2014_x86_64.whl\")\n",
-    "    os.system(\"pip install --quiet jax==0.3.25 chex==0.1.6 biopython==1.82\")\n",
+    "    os.system(\"pip install --quiet jax==0.3.25 chex==0.1.6 biopython==1.80\")\n",
     "    os.system(\"touch COLABFOLD_READY\")\n",
     "print(\"Environment ready\")\n",
     "\n",
@@ -95,7 +97,10 @@
     "protein_structures = f'{github}protein_structures'\n",
     "protein_features = f'{github}protein_features'\n",
     "reference_structures = f'{github}reference_structures'\n",
-    "inputs = f'{github}inputs'"
+    "inputs = f'{github}inputs'\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -177,7 +182,7 @@
     "plddts = []\n",
     "paes = []\n",
     "for file in data['order']:\n",
-    "  with open(f'{protein_structures}/{vprot_path}/result_{file}.pkl', 'rb') as pkl_f:\n",
+    "    pkl_f = bz2.BZ2File(f\"{protein_structures}/{vprot_path}/result_{file}.pkl.bz2\", \"r\")\n",
     "    model_data = pickle.load(pkl_f)\n",
     "    plddts.append(model_data['plddt'])\n",
     "    paes.append(model_data['predicted_aligned_error'])\n",
@@ -349,7 +354,7 @@
     "plddts = []\n",
     "paes = []\n",
     "for file in data['order']:\n",
-    "  with open(f'{protein_structures}/{sars_cov_path}/result_{file}.pkl', 'rb') as pkl_f:\n",
+    "    pkl_f = bz2.BZ2File(f\"{protein_structures}/{sars_cov_path}/result_{file}.pkl.bz2\", \"r\")\n",
     "    model_data = pickle.load(pkl_f)\n",
     "    plddts.append(model_data['plddt'])\n",
     "    paes.append(model_data['predicted_aligned_error'])\n",
@@ -369,7 +374,7 @@
    "outputs": [],
    "source": [
     "# @title Comparison between the free protein (PDBID: 6WQF) and the ligand bound protein (PDBID: 6XQS)  { display-mode: \"form\" }\n",
-    "from utils import align_on_ref, show_aligned, plot_chain_legend\n",
+    "from CS3_2024_AlphaFold_Tutorial.utils import align_on_ref, show_aligned, plot_chain_legend\n",
     "\n",
     "ref_b_file = f'{reference_structures}/6XQS.pdb'\n",
     "ref_b_aligned = f'{reference_structures}/6XQS_aligned.pdb'\n",
@@ -532,19 +537,22 @@
    "outputs": [],
    "source": [
     "# @title Plot plDDT & PAE { display-mode: \"form\" }\n",
+    "\n",
+    "adrb2_monomer = load_monomer_objects({'ADRB2_filter_adrb2': protein_features}, 'ADRB2_filter_adrb2')\n",
+    "\n",
     "with open(f\"{protein_structures}/{adrb2_path}/ranking_debug.json\", 'r') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "plddts = []\n",
     "paes = []\n",
     "for file in data['order']:\n",
-    "  with open(f'{protein_structures}/{adrb2_path}/result_{file}.pkl', 'rb') as pkl_f:\n",
+    "    pkl_f = bz2.BZ2File(f\"{protein_structures}/{adrb2_path}/result_{file}.pkl.bz2\", \"r\")\n",
     "    model_data = pickle.load(pkl_f)\n",
     "    plddts.append(model_data['plddt'])\n",
     "    paes.append(model_data['predicted_aligned_error'])\n",
     "\n",
-    "plddts_plot = plot_plddts(plddts, [len(sarscov_monomer.sequence)])\n",
-    "pae_plot = plot_paes(paes, [len(sarscov_monomer.sequence)])\n",
+    "plddts_plot = plot_plddts(plddts, [len(adrb2_monomer.sequence)])\n",
+    "pae_plot = plot_paes(paes, [len(adrb2_monomer.sequence)])\n",
     "\n",
     "plddts_plot.savefig(f\"{output_path}/plddts_plot.png\")\n",
     "pae_plot.savefig(f\"{output_path}/pae_plots.png\")"
@@ -661,7 +669,6 @@
     "                    logging.StreamHandler(),\n",
     "                    ])\n",
     "\n",
-    "adrb2_monomer = load_monomer_objects({'ADRB2_filter_adrb2': protein_features}, 'ADRB2_filter_adrb2')\n",
     "active_state_filter = load_template_filter(f'{inputs}/active_state.yaml')\n",
     "\n",
     "template_featurizer = templates.HmmsearchHitFeaturizer(\n",
@@ -790,7 +797,7 @@
     "plddts = []\n",
     "paes = []\n",
     "for file in data['order']:\n",
-    "  with open(f'{output_path}/result_{file}.pkl', 'rb') as pkl_f:\n",
+    "    pkl_f = bz2.BZ2File(f\"{output_path}/result_{file}.pkl.bz2\", \"r\")\n",
     "    model_data = pickle.load(pkl_f)\n",
     "    plddts.append(model_data['plddt'])\n",
     "    paes.append(model_data['predicted_aligned_error'])\n",
