fixed typos and import errors

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -537,7 +537,7 @@
    "outputs": [],
    "source": [
     "# @title Plot plDDT & PAE { display-mode: \"form\" }\n",
-    "\n",
+    "from litaf.objects import load_monomer_objects\n",
     "adrb2_monomer = load_monomer_objects({'ADRB2_filter_adrb2': protein_features}, 'ADRB2_filter_adrb2')\n",
     "\n",
     "with open(f\"{protein_structures}/{adrb2_path}/ranking_debug.json\", 'r') as f:\n",
@@ -552,10 +552,7 @@
     "    paes.append(model_data['predicted_aligned_error'])\n",
     "\n",
     "plddts_plot = plot_plddts(plddts, [len(adrb2_monomer.sequence)])\n",
-    "pae_plot = plot_paes(paes, [len(adrb2_monomer.sequence)])\n",
-    "\n",
-    "plddts_plot.savefig(f\"{output_path}/plddts_plot.png\")\n",
-    "pae_plot.savefig(f\"{output_path}/pae_plots.png\")"
+    "pae_plot = plot_paes(paes, [len(adrb2_monomer.sequence)])"
    ]
   },
   {
@@ -658,7 +655,6 @@
    "outputs": [],
    "source": [
     "# @title Querying GPCRdb { display-mode: \"form\" }\n",
-    "from litaf.objects import load_monomer_objects\n",
     "from litaf.filterpdb import load_template_filter\n",
     "from alphafold.data import templates\n",
     "\n",
