updated notebook to remove need for saved tempalte files

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -514,7 +514,7 @@
    "outputs": [],
    "source": [
     "# @title Display 3D structure { display-mode: \"form\" }\n",
-    "rank_num = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
+    "rank_num = 1 #@param [\"1\", \"2\", 3, 4, 5] {type:\"raw\"}\n",
     "color = \"lDDT\" #@param [\"chain\", \"lDDT\", \"rainbow\"]\n",
     "show_sidechains = False #@param {type:\"boolean\"}\n",
     "show_mainchains = False #@param {type:\"boolean\"}\n",
@@ -666,17 +666,7 @@
     "                    ])\n",
     "\n",
     "active_state_filter = load_template_filter(f'{inputs}/active_state.yaml')\n",
-    "\n",
-    "template_featurizer = templates.HmmsearchHitFeaturizer(\n",
-    "                                mmcif_dir='inputs/adrb2_templates',\n",
-    "                                max_template_date='2050-01-01',\n",
-    "                                max_hits=20,\n",
-    "                                kalign_binary_path='kalign',\n",
-    "                                obsolete_pdbs_path=None,\n",
-    "                                release_dates_path=None,\n",
-    "                            )\n",
-    "adrb2_monomer.template_hits = adrb2_monomer.template_hits[:140]\n",
-    "adrb2_monomer.make_template_features(template_featurizer, filter_t = active_state_filter)"
+    "active_feat_dict = adrb2_monomer.filter_templates(active_state_filter)"
    ]
   },
   {
@@ -748,7 +738,7 @@
     "predict(\n",
     "        model_runners,\n",
     "        output_path,\n",
-    "        adrb2_monomer.feature_dict,\n",
+    "        active_feat_dict,\n",
     "        0,\n",
     "        False,\n",
     "        fasta_name=adrb2_monomer.description+run_description,\n",
