Updated notebook with user defined prediction

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "<img src=\"https://infochim.chimie.unistra.fr/squelettes-infochim/images/logo-conferences.png\" width=\"200\" align=\"right\" style=\"height:240px\">\n",
     "\n",
-    "In this tutorial we will present you AlphaFold and its use, as weel as specific application aimed at modelling different conformational states fo a target protein.\n",
+    "In this tutorial we will present you AlphaFold and its use, as weel as specific application aimed at modelling different conformational states of a target protein.\n",
     "\n",
     "All data and information are available from this tutorial [GitHub page](https://github.com/LIT-CCM-lab/CS3_2024_AlphaFold_Tutorial)."
    ]
@@ -262,8 +262,6 @@
     "# @title Calculations settings { display-mode: \"form\" }\n",
     "#@markdown **Prediction parameters**\n",
     "\n",
-    "model_to_relax = 'all' # @param [\"all\", \"best\", \"none\"]\n",
-    "\n",
     "only_template_models = False # @param {type: 'boolean'}\n",
     "use_templates = True # @param {type: 'boolean'}\n",
     "    \n",
@@ -369,17 +367,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16274b01-426f-4ba8-888b-b2113f6074e3",
+   "id": "efb45d86-390f-4c7e-8376-b438c157edbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @title Comparison between the free protein (PDBID: 6WQF) and the ligand bound protein (PDBID: 6XQS)  { display-mode: \"form\" }\n",
+    "# @title Align AlphaFold models on reference structures { display-mode: \"form\" }\n",
     "from CS3_2024_AlphaFold_Tutorial.utils import align_on_ref, show_aligned, plot_chain_legend\n",
     "\n",
     "ref_b_file = f'{reference_structures}/6XQS.pdb'\n",
     "ref_b_aligned = f'{reference_structures}/6XQS_aligned.pdb'\n",
     "ref_a_file = f'{reference_structures}/6WQF.pdb'\n",
     "ref_a_aligned = f'{reference_structures}/6WQF_aligned.pdb'\n",
+    "\n",
+    "align_on_ref(ref_a_file, ref_b_file, 'SV6')\n",
+    "for i in range(5):\n",
+    "    align_on_ref(f\"{output_path}/ranked_{i}.pdb\", ref_b_file, 'SV6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16274b01-426f-4ba8-888b-b2113f6074e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Comparison between the free protein (PDBID: 6WQF) and the ligand bound protein (PDBID: 6XQS)  { display-mode: \"form\" }\n",
     "\n",
     "holo_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "apo_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
@@ -389,14 +401,13 @@
     "\n",
     "#@markdown Click on any atom to show a label with the residue name, the residue number, and the atom name.<br/>Click a second time on the same atom to hide the label.\n",
     "\n",
-    "align_on_ref(ref_a_file, ref_b_file, 'SV6')\n",
     "show_aligned(ref_a_aligned, ref_b_aligned, 'SV6',\n",
     "             model_cartoon_color = apo_cartoon_color,\n",
     "             ref_cartoon_color = holo_cartoon_color,\n",
     "             ligand_color = ligand_color,\n",
     "             model_sidecahin_color = apo_sidechain_color,\n",
     "             ref_sidecahin_color = holo_sidechain_color).show()\n",
-    "plot_chain_legend(name_model = 'Holo', name_ref = 'Apo',\n",
+    "plot_chain_legend(name_model = 'Apo', name_ref = 'Holocd ',\n",
     "             model_cartoon_color = apo_cartoon_color,\n",
     "             ref_cartoon_color = holo_cartoon_color,\n",
     "             ligand_color = ligand_color[:-6],\n",
@@ -413,7 +424,6 @@
    "source": [
     "# @title Comparison between the AlphaFold model and the ligand bound protein (PDBID: 6XQS)  { display-mode: \"form\" }\n",
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
-    "tag = rank_num - 1\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
@@ -423,10 +433,7 @@
     "\n",
     "\n",
     "\n",
-    "pdb_filename = f\"{output_path}/ranked_{tag}.pdb\"\n",
-    "\n",
-    "aligned_model = pdb_filename.split('.')[0]+'_aligned.pdb'\n",
-    "align_on_ref(pdb_filename, ref_b_file, 'SV6')\n",
+    "aligned_model = f\"{output_path}/ranked_{rank_num - 1}_aligned.pdb\"\n",
     "show_aligned(aligned_model, ref_b_aligned, 'SV6',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
     "             ref_cartoon_color = reference_cartoon_color,\n",
@@ -449,7 +456,6 @@
    "source": [
     "# @title Comparison between the AlphaFold model and the free protein (PDBID: 6WQF) { display-mode: \"form\" }\n",
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
-    "tag = rank_num - 1\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
@@ -457,7 +463,7 @@
     "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
-    "aligned_model = f\"{output_path}/ranked_{tag}_aligned.pdb\"\n",
+    "aligned_model = f\"{output_path}/ranked_{rank_num - 1}_aligned.pdb\"\n",
     "\n",
     "show_aligned(aligned_model, ref_a_aligned, 'GST',\n",
     "             model_cartoon_color = AF_model_cartoon_color,\n",
@@ -644,7 +650,30 @@
     "\n",
     "In this case we select only templates of GPCRs not corresponding to human ADRB2 in an active state conformation.\n",
     "\n",
-    "For more information about template selection please consult the [LIT-AlphaFold wiki](https://github.com/LIT-CCM-lab/LIT-AlphaFold/wiki) and [GPCRdb](https://gpcrdb.org/)."
+    "For more information about template selection please consult the [LIT-AlphaFold wiki](https://github.com/LIT-CCM-lab/LIT-AlphaFold/wiki) and [GPCRdb]()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b81a4bc-f159-4438-96cd-a78143eb0a1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Load query { display-mode: \"form\" }\n",
+    "import yaml\n",
+    "from litaf.filterpdb import load_template_filter\n",
+    "\n",
+    "logging.basicConfig(format=\"%(levelname)s - %(message)s\",\n",
+    "                    level = logging.INFO,\n",
+    "                    handlers=[\n",
+    "                    logging.FileHandler(f\"{protein_features}/adrb2.log\"),\n",
+    "                    logging.StreamHandler(),\n",
+    "                    ])\n",
+    "\n",
+    "active_state_filter = load_template_filter(f'{inputs}/active_state.yaml')\n",
+    "print(\"Content of the query:\\n\")\n",
+    "print(yaml.dump(active_state_filter[0]))"
    ]
   },
   {
@@ -655,17 +684,6 @@
    "outputs": [],
    "source": [
     "# @title Querying GPCRdb { display-mode: \"form\" }\n",
-    "from litaf.filterpdb import load_template_filter\n",
-    "from alphafold.data import templates\n",
-    "\n",
-    "logging.basicConfig(format=\"%(levelname)s - %(message)s\",\n",
-    "                    level = logging.INFO,\n",
-    "                    handlers=[\n",
-    "                    logging.FileHandler(f\"{protein_features}/adrb2.log\"),\n",
-    "                    logging.StreamHandler(),\n",
-    "                    ])\n",
-    "\n",
-    "active_state_filter = load_template_filter(f'{inputs}/active_state.yaml')\n",
     "active_feat_dict = adrb2_monomer.filter_templates(active_state_filter)"
    ]
   },
@@ -686,8 +704,6 @@
    "outputs": [],
    "source": [
     "# @title Calculations settings { display-mode: \"form\" }\n",
-    "model_to_relax = 'all' # @param [\"all\", \"best\", \"none\"]\n",
-    "\n",
     "only_template_models = True # @param {type: 'boolean'}\n",
     "use_templates = True # @param {type: 'boolean'}\n",
     "max_seqs = \"8:16\" # @param [\"8:16\", \"16:32\"]\n",
@@ -839,6 +855,207 @@
    "source": [
     "# @title Package and Download results { display-mode: \"form\" }\n",
     "results_zip = f\"ADRB2_multistate.zip\"\n",
+    "os.system(f\"zip -r {results_zip} {output_path}\")\n",
+    "files.download(results_zip)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c2d080e-4d7b-4568-b2e6-476d36b0374d",
+   "metadata": {},
+   "source": [
+    "## Try it yourself\n",
+    "You can try to input the sequence of a new protein target and see predict it using AlphaFold, by performing some changes to the input like template selection, or obtain a more diverse structure by performing subsampling of the MSA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07746f83-28af-460b-bd5b-97c43742ac9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Inputs { display-mode: \"form\" }\n",
+    "#@markdown **Protein name**\n",
+    "protein_name = \"UserProtein\" # @param {type:\"string\"}\n",
+    "#@markdown **Sequence**\n",
+    "seq = \"\" # @param {type:\"string\"}\n",
+    "seq = seq.replace(\" \", \"\")\n",
+    "user_monomer = MonomericObjectMmseqs2(protein_name, seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e0418b-7d81-4c9b-a18d-be32b2cd9617",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Search database { display-mode: \"form\" }\n",
+    "\n",
+    "user_monomer.make_features(DEFAULT_API_SERVER=DEFAULT_API_SERVER,\n",
+    "                                            output_dir=protein_features,\n",
+    "                                            templates_path='mmseqs2',\n",
+    "                                            max_template_date='2050-01-01',\n",
+    "                                            filter_t= [{}, []])\n",
+    "\n",
+    "%matplotlib inline\n",
+    "plot_msa_v2(sarscov_monomer.feature_dict)\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3accbba7-9804-4b22-b133-5e7aee25e061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Filter templates { display-mode: \"form\" }\n",
+    "filter_templates = False #@param {type:\"boolean\"}\n",
+    "\n",
+    "selected_templates = \"\" # @param {type:\"string\"}\n",
+    "excluded_templates = \"\" # @param {type:\"string\"}\n",
+    "#@markdown Indicate the templates by writing the relevant **four** symbols PDBID codes seprated by commas.<br/>ex. *3odu,3oe0,4rws*\n",
+    "\n",
+    "if filter_templates:\n",
+    "    user_query = {'subset_pdb': [n.upper() for n in selected_templates.split(',')],\n",
+    "                'excluded_pdb': [n.upper() for n in excluded_templates.split(',')]}\n",
+    "    user_monomer.filter_tempaltes([user_query, None], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd1d755-133f-4835-a59d-7393406113d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Calculations settings { display-mode: \"form\" }\n",
+    "only_template_models = False # @param {type: 'boolean'}\n",
+    "use_templates = True # @param {type: 'boolean'}\n",
+    "max_seqs = \"default\" # @param [\"default\", \"8:16\", \"16:32\"]\n",
+    "\n",
+    "if max_seq != 'default':\n",
+    "    max_seq, max_extra_seq = max_seqs.split(':')\n",
+    "    max_seq = int(max_seq)\n",
+    "    max_extra_seq = int(max_extra_seq)\n",
+    "    run_description = f'_MSA-subsampling-{max_seqs}'\n",
+    "else:\n",
+    "    max_seq = None\n",
+    "    max_extra_seq = None\n",
+    "    run_description = ''\n",
+    "\n",
+    "from litaf.utils import read_custom\n",
+    "    \n",
+    "logging.basicConfig(format=\"%(levelname)s - %(message)s\",\n",
+    "                    level = logging.INFO,\n",
+    "                    handlers=[\n",
+    "                    logging.FileHandler(f\"{protein_structures}/{protein_name}.log\"),\n",
+    "                    logging.StreamHandler(),\n",
+    "                    ])\n",
+    "\n",
+    "n = 2 if only_template_models else 5\n",
+    "if not all([os.path.isfile(f\"/params/params_model_{i}_ptm.npz\") for i in range(1,6)]):\n",
+    "    download_alphafold_params(f'alphafold2_ptm', Path(\".\"))\n",
+    "model_runners = create_colabfold_runners(\n",
+    "                    '_ptm',\n",
+    "                    n,\n",
+    "                    use_templates,\n",
+    "                    5,\n",
+    "                    \".\",\n",
+    "                    max_seq,\n",
+    "                    max_extra_seq,\n",
+    "                    1,\n",
+    "                    False,\n",
+    "                    False,\n",
+    "                    False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19916274-86cf-4b07-b99a-56ad9d1cf7fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Run predictions { display-mode: \"form\" }\n",
+    "output_path = os.path.join(protein_structures, user_monomer.description+run_description)\n",
+    "Path(output_path).mkdir(parents=True, exist_ok=True)\n",
+    "user_monomer.input_seqs = [user_monomer.sequence]\n",
+    "predict(\n",
+    "        model_runners,\n",
+    "        output_path,\n",
+    "        user_monomer.feature_dict,\n",
+    "        0,\n",
+    "        False,\n",
+    "        fasta_name=user_monomer.description+run_description,\n",
+    "        models_to_relax=ModelsToRelax.NONE,\n",
+    "        seqs=[user_monomer.sequence],\n",
+    "        allow_resume=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed214095-d714-41c7-aedd-c44ac5510339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Display 3D structure { display-mode: \"form\" }\n",
+    "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
+    "color = \"lDDT\" #@param [\"chain\", \"lDDT\", \"rainbow\"]\n",
+    "show_sidechains = False #@param {type:\"boolean\"}\n",
+    "show_mainchains = False #@param {type:\"boolean\"}\n",
+    "tag = rank_num - 1\n",
+    "\n",
+    "if only_template_models and rank_num > 2:\n",
+    "    print(\"The structure does not exist, select a rank_num less than 3\")\n",
+    "else:\n",
+    "    pdb_filename = f\"{output_path}/ranked_{tag}.pdb\"\n",
+    "    \n",
+    "    show_pdb(pdb_filename, 1, show_sidechains, show_mainchains, color).show()\n",
+    "    if color == \"lDDT\":\n",
+    "      plot_plddt_legend().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595dba3a-a5ee-4927-8ced-f7f56677a742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Plot plDDT & PAE { display-mode: \"form\" }\n",
+    "with open(f\"{output_path}/ranking_debug.json\", 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "plddts = []\n",
+    "paes = []\n",
+    "for file in data['order']:\n",
+    "    pkl_f = bz2.BZ2File(f\"{output_path}/result_{file}.pkl.bz2\", \"r\")\n",
+    "    model_data = pickle.load(pkl_f)\n",
+    "    plddts.append(model_data['plddt'])\n",
+    "    paes.append(model_data['predicted_aligned_error'])\n",
+    "\n",
+    "plddts_plot = plot_plddts(plddts, [len(sarscov_monomer.sequence)])\n",
+    "pae_plot = plot_paes(paes, [len(sarscov_monomer.sequence)])\n",
+    "\n",
+    "plddts_plot.savefig(f\"{output_path}/plddts_plot.png\")\n",
+    "pae_plot.savefig(f\"{output_path}/pae_plots.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a84f85c0-def3-46be-8cdd-61e6f75bc5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Package and Download results { display-mode: \"form\" }\n",
+    "results_zip = f\"{protein_name}.zip\"\n",
     "os.system(f\"zip -r {results_zip} {output_path}\")\n",
     "files.download(results_zip)"
    ]
