added javascript test, included few improvements for readability

--- a/CS3_AlphaFold_tutorial.ipynb
+++ b/CS3_AlphaFold_tutorial.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "<img src=\"https://infochim.chimie.unistra.fr/squelettes-infochim/images/logo-conferences.png\" width=\"200\" align=\"right\" style=\"height:240px\">\n",
     "\n",
-    "In this tutorial we will present you AlphaFold and its use, as weel as specific application aimed at modelling different conformational states of a target protein.\n",
+    "In this tutorial we will present you AlphaFold and its use, as well as specific application aimed at modelling different conformational states of a target protein.\n",
     "\n",
     "All data and information are available from this tutorial [GitHub page](https://github.com/LIT-CCM-lab/CS3_2024_AlphaFold_Tutorial)."
    ]
@@ -100,7 +100,22 @@
     "inputs = f'{github}inputs'\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "from google.colab import files\n",
+    "from CS3_2024_AlphaFold_Tutorial.utils import align_on_ref, show_aligned, plot_chain_legend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5b22480-3c35-4cf0-93f1-5fc7d4973cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Javascript test { display-mode: \"form\" }\n",
+    "test_file = f\"{protein_structures}/1ezg.pdb\"\n",
+    "view = py3Dmol.view(js='https://3dmol.org/build/3Dmol.js', width = 800, height = 600)\n",
+    "view.addModel(open(test_file,'r').read(),'pdb').show()"
    ]
   },
   {
@@ -109,7 +124,7 @@
    "metadata": {},
    "source": [
     "## Example system - Segment of a viral polyprotein\n",
-    "Example of the outputs after a run using AlphaFold"
+    "Precalculated example of the results obtained using AlphaFold"
    ]
   },
   {
@@ -372,8 +387,6 @@
    "outputs": [],
    "source": [
     "# @title Align AlphaFold models on reference structures { display-mode: \"form\" }\n",
-    "from CS3_2024_AlphaFold_Tutorial.utils import align_on_ref, show_aligned, plot_chain_legend\n",
-    "\n",
     "ref_b_file = f'{reference_structures}/6XQS.pdb'\n",
     "ref_b_aligned = f'{reference_structures}/6XQS_aligned.pdb'\n",
     "ref_a_file = f'{reference_structures}/6WQF.pdb'\n",
@@ -426,10 +439,10 @@
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
     "\n",
     "\n",
@@ -458,10 +471,10 @@
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
     "aligned_model = f\"{output_path}/ranked_{rank_num - 1}_aligned.pdb\"\n",
     "\n",
@@ -486,7 +499,6 @@
    "outputs": [],
    "source": [
     "# @title Package and Download results { display-mode: \"form\" }\n",
-    "from google.colab import files\n",
     "results_zip = f\"3CL-proteinase_result.zip\"\n",
     "os.system(f\"zip -r {results_zip} {output_path} {github}/protein_features/3CL-proteinase.pkl.bz2\")\n",
     "files.download(results_zip)"
@@ -572,11 +584,11 @@
     "rank_num = 1 #@param [\"1\", \"2\", \"3\", \"4\", \"5\"] {type:\"raw\"}\n",
     "tag = rank_num - 1\n",
     "\n",
-    "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "reference_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "reference_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
     "adrb2_path = 'ADRB2_filter_adrb2'\n",
     "\n",
@@ -612,10 +624,10 @@
     "tag = rank_num - 1\n",
     "\n",
     "reference_cartoon_color = \"green\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
-    "AF_model_cartoon_color = \"orange\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
+    "AF_model_cartoon_color = \"magenta\" #@param [\"green\", \"cyan\", \"magenta\", \"purple\", \"white\", \"orange\", \"yellow\", \"blue\"]\n",
     "ligand_color = \"whiteCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "reference_sidechain_color = \"cyanCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
-    "AF_model_sidechain_color = \"yellowCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
+    "AF_model_sidechain_color = \"purpleCarbon\" #@param [\"greenCarbon\", \"cyanCarbon\", \"magentaCarbon\", \"purpleCarbon\", \"whiteCarbon\", \"orangeCarbon\", \"yellowCarbon\", \"blueCarbon\"]\n",
     "\n",
     "pdb_filename = f\"{protein_structures}/{adrb2_path}/ranked_{tag}.pdb\"\n",
     "\n",
@@ -922,7 +934,7 @@
     "if filter_templates:\n",
     "    user_query = {'subset_pdb': [n.upper() for n in selected_templates.split(',')],\n",
     "                'excluded_pdb': [n.upper() for n in excluded_templates.split(',')]}\n",
-    "    user_monomer.filter_tempaltes([user_query, None], inplace = True)"
+    "    user_monomer.filter_templates([user_query, None], inplace = True)"
    ]
   },
   {
